# image_processor

./: README.md
image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/filters/: crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filters_include.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  matrix_filter.cpp  matrix_filter.h  my_own_filter.cpp  my_own_filter.h  negative_filter.cpp  negative_filter.h  perlin_noise.cpp  perlin_noise.h  sharpening_filter.cpp  sharpening_filter.h
image_processor/utils/: abstract_filter.h  file_worker.cpp  file_worker.h  image.cpp  image.h  image_handler.cpp  image_handler.h
